samples/_failures_safe/1761299542_ad444b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d122bc2.c: In function ‘main’:
./samples/SAFE/__tmp_1d122bc2.c:182:17: error: expected declaration or statement at end of input
  182 |                 process_text(&sm);
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_1d122bc2.c:182:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d122bc2.c:182:17: error: expected declaration or statement at end of input
